--- a/week1/style.css
+++ b/week1/style.css
@@ -5,8 +5,8 @@ body {
   padding: 0; 
 } 
  
-header { 
-  background-color: #333; 
+h2 { 
+  background-color: #000000; 
   color: white; 
   padding: 20px; 
   text-align: center; 
